openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: efv-api
  labels:
    app: efv-api
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: efv-api
