openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: efv-api
spec:
  to:
    kind: Service
    name: efv-api
  port:
    targetPort: 80
